[gd_scene load_steps=14 format=3 uid="uid://bacsuvckqcj21"]

[ext_resource type="Script" uid="uid://dmapt1bni6hbk" path="res://Assets/下城区/战斗场景/微小提琴哥/提琴哥飞弹.gd" id="1_hqalb"]
[ext_resource type="Texture2D" uid="uid://clpkjaxnqhi74" path="res://Assets/下城区/战斗场景/微小提琴哥/高音谱号.png" id="2_othyj"]
[ext_resource type="Script" uid="uid://cnpvs7sdx28uo" path="res://Assets/下城区/战斗场景/微小提琴哥/飞弹line_2d.gd" id="3_othyj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_isth4"]
atlas = ExtResource("2_othyj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqcv7"]
atlas = ExtResource("2_othyj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g85su"]
atlas = ExtResource("2_othyj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_othyj"]
atlas = ExtResource("2_othyj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpofl"]
atlas = ExtResource("2_othyj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_othyj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_isth4")
}],
"loop": true,
"name": &"Move",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqcv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g85su")
}],
"loop": false,
"name": &"Ready",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_othyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpofl")
}],
"loop": false,
"name": &"Stop",
"speed": 30.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_os6bg"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqalb"]
size = Vector2(11802, 10265)

[sub_resource type="Curve" id="Curve_othyj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.205798, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_wqcv7"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.196078)

[node name="提琴哥飞弹" type="Area2D"]
script = ExtResource("1_hqalb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.0078125, -0.0078125)
rotation = 1.57079
sprite_frames = SubResource("SpriteFrames_othyj")
animation = &"Ready"
autoplay = "Ready"
offset = Vector2(1.00782, -2.99219)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_os6bg")

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
shape = SubResource("RectangleShape2D_hqalb")
debug_color = Color(0.343, 0.549, 0.783, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Node" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="Node"]
width = 20.0
width_curve = SubResource("Curve_othyj")
gradient = SubResource("Gradient_wqcv7")
script = ExtResource("3_othyj")
point_count = 100

[node name="Summon" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Summon" to="." method="_on_summon_timeout"]
